Margins to main info fixed/detailed on Mobile V.1

--- a/sismosStyles/19SMovil.css
+++ b/sismosStyles/19SMovil.css
@@ -73,7 +73,9 @@ header h2 {
 }
 
 .main__questions {
+  margin: 0 auto;
   margin-top: 50px;
+  width: 270px;
 
   font-family: var(--font2);
   text-align: center;
@@ -93,7 +95,7 @@ header h2 {
 
 .main-event--info {
   margin: 40px 0 15px 0;
-  width: 100%;
+  width: 95%;
   min-width: 320px;
   height: auto;
   text-align: center;
